# gemgis

./: .gitignore  .gitignore.txt  .readthedocs.yaml  CITATION.cff  CITATION.md  CONTRIBUTING.md  ContributionGuidelines.md  DevelopersGuide.md  MANIFEST.in  README.md  README_old.md  SECURITY.md  __init__.py  dev_requirements.txt  environment.yml  environment_dev.yml  gemgis.py  meta.yaml  optional_requirements.txt  project.toml  pyproject.toml  readthedocs.yaml  requirements.txt  requirements_dev.txt  requirements_optional.txt  setup.py
.github/ISSUE_TEMPLATE/: config.yml  question.md
.github/workflows/: codecov  draft-pdf.yml  greetings.yml  main.yml  pypi.yml  pypi_release.yml  python-package-conda.yml  testing.yml
data/: customsections1.dbf  customsections1.shp  interfaces1.dbf
data/Test1/: clipped.tif  customsection1_line.dbf  customsection1_line.shp  customsection1_line.shx  customsections1.shx  extent1.shx  extent1_points.dbf  extent1_points.shp  extent1_points.shx  extent1_raster_clipping.dbf  extent1_raster_clipping.shp  extent1_raster_clipping.shx  geolmap.tif  geolmap.tif.aux.xml  interfaces1_lines.shx  lines_strike.dbf  lines_strike.shp  lines_strike.shx  liths.dbf  liths.shp  liths.shx  orientations1.dbf  orientations1.shp  orientations1.shx  out_tif.tif  points_strike.dbf  points_strike.shp  points_strike.shx  randomlines1.shx  raster1.tif  raster1.tif.aux.xml  topo1.shx  topo1_geojson.geojson
data/misc/: faults.dbf  faults.sbn  faults.sbx  faults.shp  faults.shp.xml  faults.shx  formations.txt  symbols.txt  top_carboniferous.dbf  top_carboniferous.sbn  top_carboniferous.sbx  top_carboniferous.shp  top_carboniferous.shp.xml  top_carboniferous.shx
docs/: about.rst  authors.rst  conf.py  data_types.rst  examples.rst  gemgis_object.rst  index.rst  installation.rst  misc.rst  online_services.rst  postprocessing.rst  raster_data.rst  tutorials.rst  utility_tool.rst  vector_data.rst  visualization.rst
docs/api_reference/: gemgis_object.rst  index.rst  misc.rst  online_services.rst  overview.rst  postprocessing.rst  raster_data.rst  utility_tool.rst  vector.rst  vector_data.rst  visualization.rst
docs/getting_started/: about.rst  api.rst  authors.rst  contributing.rst  data_types.ipynb  data_types.rst  examples.rst  gemgis.rst  index.rst  installation.rst  modules.rst  tutorials.rst
examples/: README.txt  example01.py
examples/models/: README.txt  example01.py  example02.py  example03.py  example04.py  example05.py  example06.py  example07.py  example08.py  example09.py  example10.py  example11.py  example12.py  example13.py  example14.py  example15.py  example16.py  example17.py  example18.py  example19.py  example20.py  example21.py  example22.py  example3.py  example35.py  example37.py  example38.py  example5.py  example7.py  example8.py  example9.py
examples/notebooks/: example01.ipynb  example02.ipynb  example03.ipynb  example06.ipynb  example12.ipynb  example14.ipynb  example15.ipynb  example16.ipynb  example18.ipynb  example19.ipynb  example20.ipynb  example21.ipynb  example37.ipynb
gemgis/: __init__.py  data.py  download_gemgis_data.py  gemgis.py  interactive.py  ipynb_to_py.py  misc.py  postprocessing.py  raster.py  utils.py  vector.py  visualization.py  web.py  wms.py
gemgis/gemgis/: data.py
gemgis/notebooks/: 00_GemGIS_Project_Overview.ipynb  01_GemGIS_Map_Initiation.ipynb  02_GemGIS_WMS_Services.ipynb  03_GemGIS_Raster_Data.ipynb
gemgis/utilities/: toolbar.py
joss/: paper.bib  paper.md
notebooks/: 00_GemGIS_Project_Overview.ipynb  00_GemGIS_Test_Notebook.ipynb  01_GemGIS_Map_Initiation.ipynb  01_GemGIS_Working_with_Vector_Data.ipynb  02_GemGIS_WMS_Services.ipynb  02_GemGIS_Working_with_Raster_Data.ipynb  03_GemGIS_Working_with_WMS_Services.ipynb  04_GemGIS_Working_with_GeoJSON_Files.ipynb  04_GemGIS_Working_with_Polygons_and_Style_Files.ipynb  05_GemGIS_Working_with_Geopackages.ipynb  06_GemGIS_Working_with_Polygons_and_Style_Files.ipynb  07_GemGIS_Creating_Orientations_Data_from_Strike_Data.ipynb  08_GemGIS_Extracting_Boreholes_and_Depth_Maps.ipynb  09_GemGIS_Working_with_GemPy_Data_Class.ipynb  0x_OneGeology.ipynb  0y_Geologie_von_BaWue.ipynb  10_GemGIS_Visualizing_Data_in_GemGIS.ipynb  11_GemGIS_Working_with_WFS_Services.ipynb  13_GemGIS_Removing_Interface_Points_too_close_to_Faults.ipynb  13_GemGIS_Removing_Interfaces_too_close_to_Faults.ipynb  14_Removing_Interface_Points_located_on_fault_traces.ipynb  GemGIS_Map_Interaction.ipynb  Tutorial_01_Extracting_XY_Coordinates_from_Vector_Data.ipynb  Tutorial_02_Extracting_XYZ_Coordinates_from_Vector_Raster_Data.ipynb  WMS_GemGIS.ipynb  test.kml
notebooks/.ipynb_checkpoints/: 00_GemGIS_Test_Notebook-checkpoint.ipynb  01_GemGIS_Working_with_Vector_Data-checkpoint.ipynb  02_GemGIS_Working_with_Raster_Data-checkpoint.ipynb  03_GemGIS_Working_with_WMS_Services-checkpoint.ipynb  04_GemGIS_Working_with_GeoJSON_Files-checkpoint.ipynb  04_GemGIS_Working_with_Polygons_and_Style_Files-checkpoint.ipynb  05_GemGIS_Working_with_Geopackages-checkpoint.ipynb  06_GemGIS_Working_with_Polygons_and_Style_Files-checkpoint.ipynb  08_GemGIS_Extracting_Boreholes_and_Depth_Maps-checkpoint.ipynb  10_GemGIS_Visualizing_Data_in_PyVista-checkpoint.ipynb
notebooks/examples/: 01_OneGeology.ipynb  02_Geologie_von_BaWue.ipynb  03_Geologie_von_Bayern.ipynb  Example_1_Parallel_Inclined_Layers.ipynb  Example_2_Folded_Layer.ipynb  Example_3_Parallel_Inclined_Layers.ipynb  Example_4_Inclined_Layers_cut_by_Fault.ipynb  Example_5_Folded_Coal_Seams.ipynb  Example_7_Anticline_Syncline.ipynb  Untitled.ipynb  [WIP]_Example_1_Parallel_Inclined_Layers.ipynb  [WIP]_Example_5_Folded_Coal_Seams.ipynb  [WIP]_Example_6_.ipynb  [WIP]_Example_6_Three_Point_Problem.ipynb  [WIP]_Example_7_Anticline_Syncline.ipynb  [WIP]_Example_9_GemPy_Model_from_Cross_Sections.ipynb  lith.shp  lith.shx
notebooks/misc/: 01_Request_WCS_Elevation_Data_from_Geobasis_NRW.ipynb  file1.csv  (+8 more)
recipe/: meta.yaml
tests/: clipped.tif  test_gemgis.py  test_misc.py  test_raster.py  test_utils.py  test_vector.py  test_visualization.py  test_web.py
(+868 files in other folders)
