[build-system]
requires = ["setuptools>=68.1.2",
            "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["gemgis"]

[project]
name = "GemGIS"

maintainers = [
    {name = "Alexander Jüstel", email = "alexander.juestel@rwth-aachen.de"},
    {name = "Arthur Endlein Correia"},
    {name = "Marius Pischke"},
    {name = "Florian Wellmann"},
]

description = "Spatial data processing for geomodeling"
keywords = ["dataprocessing", "modeling", "geospatial", "geographic-data", "spatial-data", "rasterdata", "vectordata",
            "geographic", "geomodeling"]
readme = "README.md"
license = {file = "LICENSE"}
dynamic = ['version']
requires-python = ">=3.8"
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Topic :: Scientific/Engineering :: Information Analysis',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'License :: OSI Approved :: GNU General Public License v3 (GPLv3)',
    'Operating System :: OS Independent',
]
# These dependencies are needed to import GemGIS successfully
# These dependencies will automatically install other packages like numpy, pandas or matplotlib
dependencies = [
    'geopandas',
    'shapely'
    'pandas',
    'numpy',
    'affine',
    'pyproj',
    'rasterio',
    'pyvista',
    'matplotlib',
]

[project.optional-dependencies]
optionals = [
    'scipy',
    'pypdf',
    'tqdm',
    'gempy',
    'pvgeo',
    'xml',
    'scikit-image',
    'xmltodict',
    'geopy',
    'scikit-learn',
    'py7zr',
    'segysak',
    'rioxarray',
    'tqdm',
    'mplstereonet',
    'xarray',
    'owslib',
    'requests',
    'urllib'
]

build = [
    'setuptools',
    'wheel',
    'twine',
    'build'
      ]

docs = [
    'sphinx',
    'nbsphinx',
    'sphinx_markdown_tables',
    'sphinx_gallery',
    'sphinx_rtd_theme',
    'sphinx_book_theme==0.3.3',
    'sphinx_copybutton',
    'sphinx_automodapi',
    'sphinx_numfig',
    'numpydoc'
   ]

tests = [
    'pytest',
    'pytest-cov'
    ]

[project.urls]
Documentation = 'https://gemgis.readthedocs.io/'
Home = 'https://gemgis.readthedocs.io/'
"Bug Tracker" = 'https://github.com/cgre-aachen/gemgis/issues'
Repository = 'https://github.com/cgre-aachen/gemgis'
"Source Code" = 'https://github.com/cgre-aachen/gemgis'

[tool.setuptools_scm]
# Make sure setuptools uses version based on the last created tag
version_scheme = "post-release"
# Make sure scm doesn't use local scheme version for push to pypi
# (so there isn't a + in the version)
local_scheme = "no-local-version"
# This _version_generated.py file is a file that you'll never want to add to version control - so you'll want to add it to your gitignore file. but when you build your package, setuptools_Scm creates it. and it contains version information that you will pull into your package below.
write_to = "gemgis/_version_generated.py"
write_to_template = '__version__ = "v{version}"'

